# whitepapers

profitmaxi/: Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  tsconfig.json
profitmaxi/.github/workflows/: ci.yml
profitmaxi/docs/: WHITEPAPER.md
profitmaxi/keeper/: package.json  tsconfig.json
profitmaxi/keeper/src/: index.ts  multi-dex-keeper.ts
profitmaxi/keeper/src/amm/: aggregator.ts  base.ts  meteora.ts  pumpswap.ts  raydium.ts
profitmaxi/migrations/: deploy.ts
profitmaxi/programs/profitmaxi/: Cargo.toml
profitmaxi/programs/profitmaxi/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs
profitmaxi/programs/profitmaxi/src/instructions/: cancel_order.rs  create_order.rs  execute_shard.rs  initialize.rs  mod.rs  pause_order.rs  register_keeper.rs  resume_order.rs  update_config.rs  update_order.rs  withdraw_fees.rs
profitmaxi/scripts/: deploy.ts
profitmaxi/sdk/: jest.config.js  package.json  tsconfig.json
profitmaxi/sdk/src/: client.ts  constants.ts  index.ts  instructions.ts  types.ts  utils.ts
profitmaxi/sdk/src/__tests__/: amm.test.ts  discriminators.test.ts  math.test.ts
profitmaxi/sdk/src/amm/: index.ts  meteora.ts  raydium.ts  types.ts
profitmaxi/simulations/: results_summary.json  simulation.py
profitmaxi/tests/: multi-dex.ts  profitmaxi.ts
